<resources>
    <string name="app_name">#TrollBlockNet App</string>
    <string name="app_version">1.4</string>
    <string name="action_logout">Sortir</string>
    <string name="action_settings">Configuració</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">\#TrollBlockNet App </string>
    <string name="nav_header_subtitle">(Versió Beta 1.4 DEV)</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_lists">Llistats</string>
    <string name="nav_report">Reportar Trolls</string>
    <string name="nav_certify">Verificar Trolls</string>
    <string name="nav_academy">Bones Pràctiques</string>
    <string name="nav_faq">FAQ\'s</string>
    <string name="nav_tools">Eines i Utilitats</string>
    <string name="nav_share">Recomana aquesta App</string>
    <string name="nav_contact">Contacta-n\'s</string>
    <string name="dialog_report_success_title">Troll Reportat. Gràcies!</string>
    <string name="dialog_report_success_message">Troll Reportat. Gràcies!</string>
    <string name="fragment_report_pas1">1. Indica un Tweet del perfil que vulguis reportar:</string>
    <string name="fragment_report_pas2">2. Proposa una llista:</string>
    <string name="fragment_report_pas3">3. (Opcional) Afegeix fins a 5 etiquetes que descriguin amb una mica més de detall el motiu pel qual reportes aquest perfil (i.e:  #Infiltrada, #TrollUnionista, #Feixista, #Masclista, #Homofòbia, #Catalanofòbia) :</string>
    <string name="fragment_report_bullet1_trolls">Trolls i/o infiltrats</string>
    <string name="fragment_report_bullet2_xusma">Col·laboradors amb el règim 78</string>
    <string name="fragment_report_bullet3_ibex">Empreses de l\'IBEX-35</string>
    <string name="lists_fragment_title">Subscipció a les llistes de bloqueigs automàtics</string>
    <string name="nav_alerts">Alertes</string>
    <string name="error_handle_share_action_no_connection">No s\'ha pogut reportar el tweet. Comprova la teva connexió a Internet i que el tweet no hagi sigut eliminat.</string>
    <string name="error_handle_share_action_success">Perfil reportat correctament</string>
    <string name="error_handle_share_action_title">Reportar Troll</string>
    <string name="title_activity_settings">Configuració</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="settings_label_rabbitmq_url">URL de la cua rabbitmq:</string>
    <string name="settings_title">Configuració</string>
</resources>
